--- a/res/values/gtfs_rts_values_gen.xml
+++ b/res/values/gtfs_rts_values_gen.xml
@@ -9,4 +9,6 @@
     <string name="gtfs_rts_area_min_lng">-79.28662</string>
     <string name="gtfs_rts_area_max_lng">-79.223543</string>
     <string name="gtfs_rts_color">00AAA0</string>
+    <integer name="gtfs_rts_first_departure_in_sec">1525009500</integer>
+    <integer name="gtfs_rts_last_departure_in_sec">1535750820</integer>
 </resources>
